<?xml version="1.0"?>

<package format="2">
  <name>uav_nav</name>
  <version>1.0.0</version>
  <description>UAV Launch files and code for autonomous navigation  using Google Cartographer</description>
  <author email="chuckmails@gmail.com">Chuck00lin</author>
  <maintainer email="chuckmails@gmail.com">Chuck00lin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>ydlidar_ros</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <test_depend>roslaunch</test_depend>

  <export>
  </export>
</package>
